chore: remove cached .php-cs-fixer.cache file
This commit deletes the .php-cs-fixer.cache file which should not be tracked in version control as it is generated dynamically.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-# Dependências do Composer
+# Composer dependencies
 /vendor/
 
+# Project files
+.php-cs-fixer.cache
 /.env
 /.env.local
 
+# IDE files
 /.idea/
 /.vscode/
 
-# Arquivos do sistema operacional
+# OS files
 .DS_Store
 Thumbs.db
