--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "MyCommands\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "MyCommands\\Tests\\": "tests/"
+        }
+    },
     "bin": [
         "bin/console"
     ],
@@ -24,6 +29,7 @@
         }
     ],
     "require-dev": {
-        "phpstan/phpstan": "^2.1"
+        "phpstan/phpstan": "^2.1",
+        "phpunit/phpunit": "^10.5"
     }
 }
