feat: add PHP 8.3 and ext-xml dependencies to composer.json
This commit introduces compatibility with PHP version 8.3 and adds the ext-xml extension as a requirement in the composer.json, ensuring the project supports necessary XML functionalities.

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
     "description": "A bunch of useful terminal commands",
     "type": "library",
     "require": {
+        "php": "^8.3",
+        "ext-xml": "*",
         "symfony/console": "^7.2",
         "symfony/process": "^7.2",
         "symfony/http-client": "^7.2",
