feat: add mbstring extension requirement and update ZipAllCommand
- Add `ext-mbstring` as a required dependency in `composer.json`.
- Import `ZipHelper` and `AsCommand` in `ZipAllCommand.php`, and reorganize imports.
- Refine parameter documentation in `ZipHelper.php` for clarity.

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "php": "^8.3",
         "ext-xml": "*",
+        "ext-mbstring": "*",
         "symfony/console": "^7.2",
         "symfony/process": "^7.2",
         "symfony/http-client": "^7.2",
