--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     ],
     "require-dev": {
         "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5",
+        "mikey179/vfsstream": "^1.6"
     }
 }
