--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,41 @@
 {
-    "name": "luizalbertobm/mycommands",
-    "description": "A bunch of useful terminal commands",
-    "type": "library",
-    "require": {
-        "php": "^8.3",
-        "ext-xml": "*",
-        "ext-mbstring": "*",
-        "symfony/console": "^7.2",
-        "symfony/process": "^7.2",
-        "symfony/http-client": "^7.2",
-        "react/http": "^1.11",
-        "react/event-loop": "^1.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "MyCommands\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "MyCommands\\Tests\\": "tests/"
-        }
-    },
-    "bin": [
-        "bin/console"
-    ],
-    "authors": [
-        {
-            "name": "Luiz Mesquita",
-            "email": "luizalbertobm@gmail.com"
-        }
-    ],
-    "require-dev": {
-        "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^10.5",
-        "mikey179/vfsstream": "^1.6"
+  "name": "luizalbertobm/mycommands",
+  "description": "A bunch of useful terminal commands",
+  "type": "library",
+  "require": {
+    "php": "^8.3",
+    "ext-xml": "*",
+    "ext-mbstring": "*",
+    "symfony/console": "^7.2",
+    "symfony/process": "^7.2",
+    "symfony/http-client": "^7.2",
+    "react/http": "^1.11",
+    "react/event-loop": "^1.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "MyCommands\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "MyCommands\\Tests\\": "tests/"
+    }
+  },
+  "bin": [
+    "bin/console"
+  ],
+  "authors": [
+    {
+      "name": "Luiz Mesquita",
+      "email": "luizalbertobm@gmail.com"
+    }
+  ],
+  "require-dev": {
+    "phpstan/phpstan": "^2.1",
+    "phpunit/phpunit": "^10.5",
+    "mikey179/vfsstream": "^1.6"
+  },
+  "license": "MIT"
 }
+
