feat(workflow): add test coverage job and update README badge

--- a/.github/workflows/packagist-sync.yml
+++ b/.github/workflows/packagist-sync.yml
@@ -12,8 +12,53 @@ permissions:
   repository-projects: write
 
 jobs:
+  test-and-update-coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+          extensions: mbstring, xml, zip, xdebug
+          coverage: xdebug
+
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress
+
+      - name: Run tests with coverage
+        id: coverage_run
+        run: |
+          XDEBUG_MODE=coverage php vendor/bin/phpunit --coverage-text > coverage-output.txt
+          echo "Test completed successfully"
+          cat coverage-output.txt
+
+      - name: Extract coverage percentage
+        id: extract_coverage
+        run: |
+          COVERAGE_DATA=$(cat coverage-output.txt | grep "Lines:" | awk '{print $3}' | tr -d '%')
+          echo "coverage=$COVERAGE_DATA" >> $GITHUB_OUTPUT
+          echo "Coverage percentage: $COVERAGE_DATA%"
+
+      - name: Update README with coverage
+        run: |
+          COVERAGE_DATA="${{ steps.extract_coverage.outputs.coverage }}"
+          # Update the coverage badge in README.md
+          sed -i "s|!\[COVERAGE [0-9.]\+%\](https://img.shields.io/badge/coverage-[0-9.]\+%25-0E1111?style=flat&logo=php&logoColor=white&labelColor=171717&color=009933)|![COVERAGE ${COVERAGE_DATA}%](https://img.shields.io/badge/coverage-${COVERAGE_DATA}%25-0E1111?style=flat&logo=php&logoColor=white&labelColor=171717&color=009933)|g" README.md
+
+      - name: Commit changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add README.md
+          git diff --staged --quiet || git commit -m "docs: update coverage badge to ${COVERAGE_DATA}%"
+          git push
+
   version-and-sync:
     runs-on: ubuntu-latest
+    needs: test-and-update-coverage
     
     steps:
     - name: Checkout code
